@@ -57,10 +57,11 @@ allprojects {
     apply plugin: 'idea'
     apply plugin: 'groovy'
     apply plugin: 'java-library'
+    apply plugin: 'jacoco'
 
     java {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(17)
+            languageVersion = JavaLanguageVersion.of(19)
         }
     }
 
@@ -99,8 +100,8 @@ allprojects {
 
         // Documentation required libraries
         groovyDoc 'org.fusesource.jansi:jansi:1.11'
-        groovyDoc "org.codehaus.groovy:groovy-groovydoc:3.0.16"
-        groovyDoc "org.codehaus.groovy:groovy-ant:3.0.16"
+        groovyDoc "org.codehaus.groovy:groovy-groovydoc:3.0.18"
+        groovyDoc "org.codehaus.groovy:groovy-ant:3.0.18"
     }
 
     test {
@@ -138,6 +139,7 @@ allprojects {
     if (JavaVersion.current() >= JavaVersion.VERSION_1_9) {
         tasks.withType(Test) {
             jvmArgs ([
+                    '--enable-preview',
                     '--add-opens=java.base/java.lang=ALL-UNNAMED',
                     '--add-opens=java.base/java.io=ALL-UNNAMED',
                     '--add-opens=java.base/java.nio=ALL-UNNAMED',
@@ -153,7 +155,27 @@ allprojects {
                     '--add-opens=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED',
                     '--add-opens=java.base/sun.net.www.protocol.file=ALL-UNNAMED',
                     '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
+                    '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
             ])
+        }
+    }
+
+    /**
+     * Code coverage with JaCoCo.
+     * See: https://www.jacoco.org/; https://docs.gradle.org/current/userguide/jacoco_plugin.html
+     */
+    // Code coverage report is always generated after tests run
+    test { finalizedBy jacocoTestReport }
+    jacocoTestReport {
+        // Tests are required to run before generating the code coverage report
+        dependsOn test
+
+        // Remove closure classes from the report, as they are already covered by the enclosing class coverage stats adding only noise.
+        // See: https://stackoverflow.com/questions/39453696
+        afterEvaluate {
+            classDirectories.setFrom(files(classDirectories.files.collect { dir ->
+                fileTree(dir: dir, excludes: ['**/*$*_closure*'])
+            }))
         }
     }
 }
@@ -206,7 +228,7 @@ task buildInfo { doLast {
             .eachDir { if(it.name.startsWith('nf-')) plugins << project(":plugins:${it.name}") }
 
     def meta = plugins .collect { "$it.name@$it.version" }
-    file('modules/nextflow/src/main/resources/META-INF/plugins-info.txt').text = meta.join('\n')
+    file('modules/nextflow/src/main/resources/META-INF/plugins-info.txt').text = meta.toSorted().join('\n')
 }}
 
 
